Sun Nov 26 00:02:52 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java (buildAdjacency): Fix adjacency
	relations when reading non manifold meshes.
	* src/org/jcae/mesh/amibe/ds/Vertex.java (getNeighboursNodes): Make
	this method more efficient; its return value has been changed to
	a Collection.

Fri Nov 24 19:38:29 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/MMesh3D.java
	  src/org/jcae/mesh/amibe/ds/MFace3D
	  src/org/jcae/mesh/amibe/ds/MNode3D.java: Modify MMesh3D to extend
	Mesh; MFace3D and MNode3D are removed, and replaced respectively by
	Triangle and Vertex.  For now, normals are no more written into
	output files.
	* src/org/jcae/mesh/amibe/ds/Triangle.java (listLock, listCollect,
	listRelease): Replace list operations by a Triangle.List inner class,
	in order to remove static definitions.

Fri Nov 24 11:05:19 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/cad/CADExplorer.java
	  src/org/jcae/mesh/cad/CADShapeEnum.java: Remove shape type enum
	definitions from CADExplorer, this feature is now implemented in
	OCCShapeEnum.
	* src-occ/org/jcae/mesh/cad/occ/OCCShapeEnum.java: New class,
	extends CADShapeEnum.
	* src-occ/org/jcae/mesh/cad/occ/OCCExplorer.java (init): Use shape
	types from OCCShapeEnum.
	* src/org/jcae/mesh/amibe/ds/Triangle.java: adjPos was a packed
	representation into an int of edge attributes and adjacent local
	numbers.  It turns out that this representation is not that
	efficient, thus let adjPos only contain adjacent local numbers,
	and edgeAttributes is a new byte[3] array to store edge attributes.
	These members are now private.
	Add a new copy() to let OTriangle2D.split3() have a backup copy of
	Triangle instances.

Thu Nov 23 20:19:55 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/cad/CADExplorer.java: Change signature to
	void init(CADShape shape, CADShapeEnum type).
