@@ -1,3 +1,8 @@
+Mon Nov 27 15:58:46 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Pass
+	arguments through a Map.
+
 Sun Nov 26 00:02:52 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/ds/Mesh.java (buildAdjacency): Fix adjacency
